Clean up, fix null roadRegulatorID should be -1 not 0